--- a/dashboard/views/partials/sidebars/dashboard.hbs
+++ b/dashboard/views/partials/sidebars/dashboard.hbs
@@ -1,12 +1,12 @@
 <div class="sidebar">
 	<div class="sidebar-menu">
-		<a href="#" onclick="setTabby(this, 'logging')" class="sidebar-link sidebar-link-with-icon">
+		<a href="#" class="sidebar-link sidebar-link-with-icon tabby" name="logging">
 			<span class="sidebar-icon">
 				<i class="fas fa-scroll"></i>
 			</span>
 			Logging
 		</a>
-		<a href="#" onclick="setTabby(this, 'commands')" class="sidebar-link sidebar-link-with-icon">
+		<a href="#" class="sidebar-link sidebar-link-with-icon tabby" name="commands">
 			<span class="sidebar-icon">
 				<i class="fas fa-terminal"></i>
 			</span>
