do something new!

--- a/dashboard/views/admin.hbs
+++ b/dashboard/views/admin.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid h-full" id="tabby">
+<div class="container-fluid h-full d-none" id="tabby">
 	<div id="manage" class="tabby">
 		<div class="d-flex flex-column">
 			<div class="card mb-0">
