--- a/dashboard/views/dashboard.hbs
+++ b/dashboard/views/dashboard.hbs
@@ -44,7 +44,7 @@
 			</div>
 		</form>
 	</div>
-	<div id="changes" class="d-flex flex-row position-sticky bottom-0 py-5 m-0 w-full card align-items-center">
+	<div id="changes" class="d-none flex-row position-sticky bottom-0 py-5 m-0 w-full card align-items-center">
 		<button class="btn btn-primary" onclick="Submit()">Save</button>
 		<button class="btn btn-link text-danger" onclick="Reset()">Reset</button>
 		<i class="fas fa-cog fa-spin fa-2x d-none"></i>
