--- a/dashboard/views/partials/sidebars/admin.hbs
+++ b/dashboard/views/partials/sidebars/admin.hbs
@@ -1,12 +1,12 @@
 <div class="sidebar">
 	<div class="sidebar-menu">
-		<a href="#" class="sidebar-link sidebar-link-with-icon tabby" name="manage">
+		<a class="sidebar-link sidebar-link-with-icon tabby" name="manage">
 			<span class="sidebar-icon">
 				<i class="fas fa-tasks"></i>
 			</span>
 			Manage
 		</a>
-		<a href="#" class="sidebar-link sidebar-link-with-icon tabby" name="logs">
+		<a class="sidebar-link sidebar-link-with-icon tabby" name="logs">
 			<span class="sidebar-icon">
 				<i class="fas fa-terminal"></i>
 			</span>
