--- a/dashboard/public/prism.css
+++ b/dashboard/public/prism.css
@@ -1,5 +1,5 @@
 /* PrismJS 1.23.0
-https://prismjs.com/download.html#themes=prism-tomorrow&languages=log */
+https://prismjs.com/download.html#themes=prism-tomorrow&languages=git+log */
 /**
  * prism.js tomorrow night eighties for JavaScript, CoffeeScript, CSS and HTML
  * Based on https://github.com/chriskempson/tomorrow-theme
