--- a/dashboard/views/guilds.pug
+++ b/dashboard/views/guilds.pug
@@ -17,6 +17,6 @@ append body
 							div(class="p-10")
 								h5(class="card-title")= guild.name
 	else
-		div(class="card row py-auto")
+		div(class="card py-auto")
 			h2.card-title You don't have the bot in any servers where you can manage it.
 			include partials/addbot
