--- a/dashboard/views/dashboard.pug
+++ b/dashboard/views/dashboard.pug
@@ -24,7 +24,7 @@ append body
 						option(value="0") None
 
 				.form-group
-					label Member deletes
+					label Message deletes
 					select(name="deletes" class="form-control channelSelector")
 						option(value="0") None
 
