--- a/dashboard/views/sidebars/dashboard.pug
+++ b/dashboard/views/sidebars/dashboard.pug
@@ -6,3 +6,7 @@ a(class="sidebar-link sidebar-link-with-icon tabby" name="commands")
 	span.sidebar-icon
 		i.fas.fa-terminal
 	| Commands
+a(class="sidebar-link sidebar-link-with-icon tabby" name="randomreact")
+	span.sidebar-icon
+		i.fas.fa-terminal
+	| Random React
